app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 @import "bootstrap-sprockets";
 @import "bootstrap";


.signup{
height: 300px;
width: 517px;
// background: rgba(12, 103, 175, 0.97);
margin: 110px 295px;
border-radius: 30px;
// border: 5px solid black;
// padding-top: 150px;
z-index: 1;
position: absolute;
}
#company{
  text-align: center;
}

.sidebar{
  height: 700px;
}

.container{
  background: url("Whiteboard.jpg");
  background-size:cover;
  height: 689px;
  // margin-top: 50px;
}
#container{
  margin: 0 auto;
  background: image-url("home.jpg");
  background-size: cover;
  width:1100px;
  height:1000px;
}
.plans{
  height: 200px;
}

.member-pic{
  height: 200px;
  width:200px;
}
.login, .join{
  width:200px;
  margin-bottom: 20px;
}
.planPic{
  width: 270px;
  height: 300px;
  border: 10px solid black;
  border-radius: 20px;
  padding: 0;

}

.planCenter {
  text-align: center;
}
.whiteBoardHeader{
  padding: 25px;
}

